--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
   unit-tests:
     needs: calculate-policy-from-tag
     name: run unit tests and linters
-    uses: kubewarden/github-actions/.github/workflows/reusable-test-policy-rego.yml@v3.4.0
+    uses: viccuad/github-actions/.github/workflows/reusable-test-policy-rego.yml@main
     with:
       policy-working-dir: ${{ needs.calculate-policy-from-tag.ouputs.policy-working-dir }}
       policy-version: ${{ needs.calculate-policy-from-tag.ouputs.policy-version }}
@@ -44,7 +44,7 @@ jobs:
     concurrency:
       group: release-policy # only allow 1 release job of "release-policy" concurrently
       cancel-in-progress: false
-    uses: kubewarden/github-actions/.github/workflows/reusable-release-policy-rego.yml@v3.4.0
+    uses: viccuad/github-actions/.github/workflows/reusable-release-policy-rego.yml@main
     with:
       oci-target: ghcr.io/${{ github.repository_owner }}/tests/raw-validation-opa-policy
       policy-working-dir: ${{ needs.calculate-policy-from-tag.ouputs.policy-working-dir }}
